# ot-harjoitustyo

./: .gitignore  README.md  pyproject.toml  tasks.py
data/: books.json  users.json
dokumentaatio/: arkkitehtuuri.md  changelog.md  kayttoohje.md  testaus.md  tyoaikakirjanpito.md  vaatimusmaaritely.md  vaatimusmaarittely.md
laskarit/viikko1/: gitlog.txt
laskarit/viikko2/maksukortti/: pyproject.toml
laskarit/viikko2/maksukortti/src/: maksukortti.py
laskarit/viikko2/maksukortti/src/tests/: kassapaate_test.py  maksukortti_test.py
laskarit/viikko2/unicafe/: .coverage
laskarit/viikko2/unicafe/src/tests/: kassapaate_test.py  maksukortti_test.py
src/: index.py
src/data/: file_utils.py  users.json
src/repositories/: book_repository.py
src/services/: book_service.py  user_service.py
src/tests/: book_repository_test.py  services_test.py
src/ui/: main.py  register.py  theme.py  ui.py
