[project]
name = "ot-harjoitustyo"
version = "0.1.0"
description = ""
authors = [
    {name = "Sandra Ole",email = "sandra.ole@hotmail.fi"}
]
readme = "README.md"
requires-python = "^3.10"
dependencies = [
    "invoke (>=2.2.1,<3.0.0)",
    "autopep8 (>=2.3.2,<3.0.0)",
    "matplotlib (>=3.10.8,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.1,<10.0.0)",
    "coverage (>=7.12.0,<8.0.0)",
    "pylint (>=4.0.3,<5.0.0)",
    "autopep8 (>=2.3.2,<3.0.0)"
]
